--- a/microsMVCNET7/Views/CategoryValues/Create.cshtml
+++ b/microsMVCNET7/Views/CategoryValues/Create.cshtml
@@ -18,13 +18,15 @@
                 <span asp-validation-for="Value" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <select asp-for="Category">
-                    <option asp-for="Category" >Select</option>
+                <label asp-for="Category.Name "class="control-label"></label>
+                <select asp-for="Category.Name">
+                    <option value="" asp-for="Category.Name">Select</option>
                     @foreach(var i in ViewBag.Categories)
                     {
-                        <option asp-for="Category" value=@i.Id>@i.Name</option>
+                        <option asp-for="Category.Name" value=@i.Id>@i.Name</option>
                     }
                 </select>
+                <span asp-validation-for="Category.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
